--- a/_config.yml
+++ b/_config.yml
@@ -84,11 +84,11 @@ author:
   avatar           : "profile.png"
   bio              : "Physics and AI enthusiast. Training vision models on large datasets. Keep learning and stay curious :)"
   location         : "Barcelona, Spain"
-  kaggle           : "https://www.kaggle.com/jordibeltranperello"
+  kaggle           : ""
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            :
+  email            :  jordiibeltran@gmail.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -103,8 +103,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jordi-beltran-perell%C3%B3-a71952164/"
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "jordi-beltran-perelló-a71952164/"
+  orcid            : "https://www.kaggle.com/jordibeltranperello"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -114,7 +114,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          :
+  youtube          : "UCtpzqHiK--KdpxzYjyGuCrA"
   wikipedia        :
 
 
