--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,13 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Projects"
     url: /publications/
+
+  - title: "Blog posts"
+    url: /year-archive/
+
+  - title: "CV"
+    url: /cv/
 
   - title: "Talks"
     url: /talks/    
@@ -11,9 +17,6 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /cv/
