--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            :  jordiibeltran@gmail.com
+  email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -104,7 +104,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "jordi-beltran-perelló-a71952164/"
-  orcid            : "https://www.kaggle.com/jordibeltranperello"
+  orcid            : # "https://www.kaggle.com/jordibeltranperello"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -114,7 +114,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "UCtpzqHiK--KdpxzYjyGuCrA"
+  youtube          : # "UCtpzqHiK--KdpxzYjyGuCrA"
   wikipedia        :
 
 
