--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Projects"
-    url: /publications/
+    url: /projects/
 
   - title: "Blog posts"
     url: /year-archive/
